@@ -1,5 +1,5 @@
 # Host: FreeBSD/sparc64
 NATDEPFILES= fork-child.o inf-ptrace.o \
-	sparc64fbsd-nat.o sparc64-nat.o sparc-nat.o \
-	solib.o solib-svr4.o solib-legacy.o
-NAT_FILE= nm-fbsd.h
+	fbsd-nat.o sparc-nat.o sparc64-nat.o sparc64fbsd-nat.o \
+	gcore.o solib.o solib-svr4.o solib-legacy.o
+NAT_FILE= solib.h
